--- a/webpages/colourLight.html
+++ b/webpages/colourLight.html
@@ -8,7 +8,7 @@
         <meta name="keywords" content="Code, Playground, Practice, Programming, Photo, Picture, Selfie">
         <meta name="description" content="Colour Light for Selfies">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="author" content="Livs">
+        <meta name="author" content="xlivia">
 
         <style>
             body {
